# xsched-artifacts

./: .gitignore  .gitmodules  README.md
ascend/fig7/: CMakeLists.txt  README.md
ascend/fig7/acl/: CMakeLists.txt
ascend/fig7/acl/include/: model.h  utils.h
ascend/fig7/acl/src/: model.cpp
ascend/fig7/main/: fp_bg.cpp  fp_fg.cpp  fp_sa.cpp  up_bg.cpp  up_fg.cpp  up_sa.cpp
ascend/fig7/scripts/: 910b.sh  convert.sh  fp_base.sh  fp_sa.sh  fp_xsched.sh  up_base.sh  up_sa.sh  up_xsched.sh
assets/: download.sh
cuda/fig11/: CMakeLists.txt  Makefile  README.md
cuda/fig11/financial/: CMakeLists.txt  README.md
cuda/fig11/financial/src/: BlackScholes.cu
cuda/fig11/scientific/: CMakeLists.txt
cuda/fig11/scientific/src/: euler3d.cu
cuda/fig11/scripts/: cotrain_base.sh  cotrain_sa.sh  cotrain_tgs.sh  cotrain_vcuda.sh  cotrain_xsched.sh  run.sh  scifin_base.sh  scifin_sa.sh  scifin_tgs.sh  scifin_vcuda.sh  scifin_xsched.sh
cuda/fig11/training/: shufflenet.py
cuda/fig13a/: README.md
cuda/fig13a/BERT/: README.md
cuda/fig13a/client/: run.sh
cuda/fig13b/: CMakeLists.txt  README.md
cuda/fig13b/scripts/: run_native.sh  run_paella.sh  run_xsched.sh
cuda/fig13b/src/: main.cpp
cuda/fig7/: CMakeLists.txt  Makefile  README.md
cuda/fig7/main/: fp_bg.cpp  fp_fg.cpp  fp_sa.cpp  up_bg.cpp  up_fg.cpp  up_sa.cpp
cuda/fig7/scripts/: fp_base.sh  fp_sa.sh  fp_xsched.sh  gv100.sh  k40m.sh  run.sh  up_base.sh  up_sa.sh  up_xsched.sh
cuda/fig7/trt/: CMakeLists.txt
cuda/fig7/trt/cmake/: FindTensorRT.cmake
cuda/fig7/trt/include/: cuda_assert.h  model.h  tensor.h
cuda/fig7/trt/src/: model.cpp  tensor.cpp
cuda/fig9/: CMakeLists.txt  README.md  gv100.sh  run.sh
cuda/fig9/main/: levels.cu
dla/fig7/: CMakeLists.txt  Makefile  README.md
dla/fig7/dla/: CMakeLists.txt
dla/fig7/dla/include/: model.h  utils.h
dla/fig7/dla/src/: model.cpp
dla/fig7/main/: fp_bg.cpp  fp_fg.cpp  fp_sa.cpp  up_bg.cpp  up_fg.cpp  up_sa.cpp
dla/fig7/scripts/: dla.sh  fp_base.sh  fp_sa.sh  fp_xsched.sh  up_base.sh  up_sa.sh  up_xsched.sh
get_started/: Makefile  README.md  app.cu  run_high_priority.sh  run_low_priority.sh  run_xserver.sh
hip/fig11/: CMakeLists.txt  README.md
hip/fig11/financial/: CMakeLists.txt
hip/fig11/financial/include/: BlackScholes_kernel.cuh  helper_cuda.h
hip/fig11/financial/src/: BlackScholes.hip
hip/fig11/scientific/: CMakeLists.txt
hip/fig11/scientific/include/: helper_cuda.h
hip/fig11/scientific/src/: euler3d.hip
hip/fig11/scripts/: cotrain_base.sh  cotrain_sa.sh  cotrain_xsched.sh  cotrain_xsched_wo_prog.sh  run.sh  scifin_base.sh  scifin_sa.sh  scifin_xsched.sh  scifin_xsched_wo_prog.sh
hip/fig11/training/: shufflenet.py
hip/fig7/: README.md  resnet_infer.py
hip/fig7/scripts/: build.sh  fp_base.sh  fp_sa.sh  fp_xsched.sh  mi50.sh  run.sh  up_base.sh  up_sa.sh  up_xsched.sh
igpu/fig7/: README.md
igpu/fig7/python/: fp_bg.py  fp_fg.py  fp_sa.py  up_bg.py  up_fg.py  up_sa.py
igpu/fig7/scripts/: build.sh  fp_base.sh  fp_sa.sh  fp_xsched.sh  igpu.sh  run.sh  up_base.sh  up_sa.sh  up_xsched.sh
loc/: README.md  count.py
npu3720/: README.md
npu3720/fig12/: README.md
npu3720/fig12/scripts/: base.sh  build.sh  npu3720.sh  run.sh  xsched.sh
npu3720/fig12/whisper/: README-OV.md
npu3720/fig7/: CMakeLists.txt  README.md
npu3720/fig7/main/: fp_bg.cpp  fp_fg.cpp  fp_sa.cpp  up_bg.cpp  up_fg.cpp  up_sa.cpp
npu3720/fig7/ov/: CMakeLists.txt
npu3720/fig7/ov/include/: core.h  model.h
npu3720/fig7/ov/src/: core.cpp  model.cpp
npu3720/fig7/scripts/: fp_base.sh  fp_sa.sh  fp_xsched.sh  npu3720.sh  run.sh  up_base.sh  up_sa.sh  up_xsched.sh
npu3720/kmd/: .gitignore  Makefile  driver.sh  ivpu_accel_override.h  ivpu_drv.c  ivpu_drv.h  ivpu_jsm_msg.c  ivpu_jsm_msg.h  ivpu_sched.c  ivpu_sched.h
npu3720/kmd/utils/: npu_sched.h
results/: README.md
results/fig11/raw/: cotrain_base_ojob_gv100.json  cotrain_base_ojob_mi50.json  cotrain_base_pjob_gv100.json  cotrain_base_pjob_mi50.json  cotrain_sa_gv100.json  cotrain_sa_mi50.json  cotrain_tgs_ojob_gv100.json  cotrain_tgs_pjob_gv100.json  cotrain_vcuda_ojob_gv100.json  cotrain_vcuda_pjob_gv100.json  cotrain_xsched_ojob_gv100.json  cotrain_xsched_ojob_mi50.json  cotrain_xsched_pjob_gv100.json  cotrain_xsched_pjob_mi50.json  cotrain_xsched_woprog_ojob_mi50.json  cotrain_xsched_woprog_pjob_mi50.json  scifin_base_ojob_gv100.json  scifin_base_ojob_mi50.json  scifin_base_pjob_gv100.json  scifin_base_pjob_mi50.json  scifin_sa_ojob_gv100.json  scifin_sa_ojob_mi50.json  scifin_sa_pjob_gv100.json  scifin_sa_pjob_mi50.json  scifin_tgs_ojob_gv100.json  scifin_tgs_pjob_gv100.json  scifin_vcuda_ojob_gv100.json  scifin_vcuda_pjob_gv100.json  scifin_xsched_ojob_gv100.json  scifin_xsched_ojob_mi50.json  scifin_xsched_pjob_gv100.json  scifin_xsched_pjob_mi50.json  scifin_xsched_woprog_ojob_mi50.json  scifin_xsched_woprog_pjob_mi50.json
results/fig11/scripts/: gv100.plt  mi50.plt  plot.py
results/fig12/raw/: lfbw_base.json  lfbw_xsched.json  whisper_base.json  whisper_xsched.json
results/fig12/scripts/: lfbw.plt  plot.py
results/fig13a/raw/: bert-high.standalone.txt  bert-high.triton-p.txt  bert-high.triton.txt  bert-high.xsched.txt
results/fig13b/raw/: cuda_ms_lns2.txt  paella_full_lns2.txt  xsched_lns2.txt
results/fig13b/scripts/: paella.plt  plot.py
results/fig7/raw/: fp_base_910b.cdf  fp_base_dla.cdf  fp_base_gv100.cdf  fp_base_igpu.cdf  fp_base_k40m.cdf  fp_base_mi50.cdf  fp_base_npu3720.cdf  fp_base_ofa.cdf  fp_base_pva.cdf  fp_sa_910b.cdf  fp_sa_dla.cdf  fp_sa_gv100.cdf  fp_sa_igpu.cdf  fp_sa_k40m.cdf  fp_sa_mi50.cdf  (+41 more)
sys/tgs/: task.py  worker.py
sys/vcuda/: Dockerfile  build.sh  env.sh  preload.sh
vpi/fig7/: CMakeLists.txt  README.md
vpi/fig7/main/: fp_bg.cpp  fp_fg.cpp  fp_sa.cpp  up_bg.cpp  up_fg.cpp  up_sa.cpp
vpi/fig7/scripts/: fp_base.sh  fp_sa.sh  fp_xsched.sh  ofa.sh  pva.sh  set_freq.sh  up_base.sh  up_sa.sh  up_xsched.sh
vpi/fig7/vpi/: CMakeLists.txt
vpi/fig7/vpi/include/: blur.h  mblur.h  runner.h  sde.h  utils.h
vpi/fig7/vpi/src/: blur.cpp  mblur.cpp  sde.cpp
(+29 files in other folders)
